tweak to homepage

--- a/views/home.erb
+++ b/views/home.erb
@@ -11,6 +11,7 @@
   <form id="get-started" action="action/new" method="post">
     <label for="slug">Enter the url for your page!</label><br />
     <input id="slug" name="slug" type="text" size="40" placeholder="everything-is-awesome" required>
+    <a href="/ajax/valid-slug/value">Url for ajax validation</a>
     <br />
     <!-- /ajax/valid-slug/whatever-they-entered will return a {"valid":true} or nil... -->
     <br />
